Proyecto 3/k8s/consumer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mumnk8s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deploy
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: puppy-imaging-props.ngrok-free.dev/consumer:v1
          imagePullPolicy: Always
          #envFrom:
          #  - configMapRef:
          #      name: rabbitmq-config
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          restartPolicy: Always
