Proyecto 3/k8s/grpc-client.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mumnk8s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deploy
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: puppy-imaging-props.ngrok-free.dev/grpc-client:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: mumnk8s
spec:
  selector:
    app: grpc-client
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: grpc-client-pod
#spec:
#  containers:
#    - name: grpc-client
#      image: puppy-imaging-props.ngrok-free.dev/grpc-client:v1
#      imagePullPolicy: Always
