Proyecto 3/k8s/rabbitmq.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mumnk8s
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: rabbitmq-config
#data:
#  RABBITMQ_URL: "amqp://guest:guest@rabbitmq-service:5672/"
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: LoadBalancer
