Proyecto 3/k8s/api-rust.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mumnk8s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deploy
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
        - name: api-rust
          image: puppy-imaging-props.ngrok-free.dev/api-rust:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  namespace: mumnk8s
spec:
  selector:
    app: api-rust
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-rust-route
  namespace: mumnk8s
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: api-rust-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: mumnk8s
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
